[package]
name = "subkey"
description = "Python API for working with Substrate keypairs"
readme = "README.md"
version = "0.1.0-alpha.1"
authors = ["Zatoichi Labs <admin@zatoichi-labs.com>"]
repository = "https://github.com/zatoichi-labs/py-subkey"
license = "GPL-3.0-only"
edition = "2018"

[lib]
name = "subkey"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.8.3"
features = ["extension-module"]

[dependencies.primitives]
git = "https://github.com/paritytech/substrate.git"
package = "sp-core"
features = ['full_crypto']
rev = "333f3a7d00771d15102bd40f5aade9e58b1b095f"

[package.metadata.maturin]
requires-python = ">=3.8,<4"
project-url = ["https://github.com/zatoichi-labs/py-subkey"]
classifier = [
    'Development Status :: 1 - Planning',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
]
